fix : gap between slider item

--- a/src/assets/style/components/custom/slick.scss
+++ b/src/assets/style/components/custom/slick.scss
@@ -9,6 +9,9 @@
   &-dots{
     bottom: 0;
   }
+  &-slide{
+    padding: 0 .75rem;
+  }
 }
 .testimonial, .service {
   .slick {
